--- a/index.html
+++ b/index.html
@@ -3,22 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script>
-         function redirectToSite() {
-            window.location.href = 'quiz-overview.html';
-        }
-    </script>
+    <title>Document</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
-<body onclick="redirectToSite();">
-    <div id="content-wrapper">
-        <div id="header-wrapper">
-            <div id="headline-one">
-                <h1>Hi Erika</h1>
-                <img src="img/waving-hand.png" alt="" id="waving-hand-emoji">
-            </div>
+<body>
+    <div id="body-wrapper">
+        <div id="wrapper">
+            <dl class="rotate">
+                <dd class="slide-out">Hola</dd>
+                <dd class="slide-in-out two">Hello</dd>
+                <dd class="slide-in-out three">Hallo</dd>
+                <dd class="slide-in-out four">Hola</dd>
+                <dd class="slide-in-out five">Hello</dd>
+                <dd class="slide-in-out six">Hallo</dd>
+                <dd class="slide-in-out seven">Hola</dd>
+                <dd class="slide-in-out eight">Hello</dd>
+                <dd class="slide-in-out nine">Hallo</dd>
+                <dd class="slide-in-out ten">Hello</dd>
+                <dd class="slide-in">Hola</dd>
+            </dl>
+            <p>ERIKA</p>
         </div>
+    </div>
+    <div id="background-gif">
+        <img src="img/index.gif"alt="">
     </div>
     <script src="js/script.js"></script>
 </body>
