--- a/quiz-selection.html
+++ b/quiz-selection.html
@@ -7,55 +7,57 @@
     <link rel="stylesheet" href="css/quiz-selection.css">
 </head>
 <body>
-    <div id="widgets">
-        <div id="row-1">
-            <div id="widget-1">
-                <p>LEVEL 1</p>
-                <h1>MATH</h1>
+    <div id="widgets-wrapper">
+        <div id="widgets">
+            <div id="row-1">
+                <div id="widget-1">
+                    <p>LEVEL 1</p>
+                    <h1>MATH</h1>
+                </div>
+                <div id="widget-2">
+                    <p>LEVEL 2</p>
+                    <h1>CROSSWORD</h1>
+                </div>
             </div>
-            <div id="widget-2">
-                <p>LEVEL 2</p>
-                <h1>CROSSWORD</h1>
+            <div id="row-2">
+                <div id="widget-3">
+                    <p>LEVEL 3</p>
+                    <h1>CONNECTIONS</h1>
+                </div>
+                <div id="widget-4">
+                    <p>LEVEL 4</p>
+                    <h1>SHORT</h1>
+                </div>
             </div>
-        </div>
-        <div id="row-2">
-            <div id="widget-3">
-                <p>LEVEL 3</p>
-                <h1>CONNECTIONS</h1>
+            <div id="row-3">
+                <div id="widget-5">
+                    <p>LEVEL 5</p>
+                    <h1>RUBIX</h1>
+                </div>
+                <div id="widget-6">
+                    <p>LEVEL 6</p>
+                    <h1>SHORT</h1>
+                </div>
             </div>
-            <div id="widget-4">
-                <p>LEVEL 4</p>
-                <h1>SHORT</h1>
+            <div id="row-4">
+                <div id="widget-7">
+                    <p>LEVEL 7</p>
+                    <h1>SHORT</h1>
+                </div>
+                <div id="widget-8">
+                    <p>LEVEL 8</p>
+                    <h1>CONNECTIONS</h1>
+                </div>
             </div>
-        </div>
-        <div id="row-3">
-            <div id="widget-5">
-                <p>LEVEL 5</p>
-                <h1>RUBIX CUBE</h1>
-            </div>
-            <div id="widget-6">
-                <p>LEVEL 6</p>
-                <h1>SHORT</h1>
-            </div>
-        </div>
-        <div id="row-4">
-            <div id="widget-7">
-                <p>LEVEL 7</p>
-                <h1>SHORT</h1>
-            </div>
-            <div id="widget-8">
-                <p>LEVEL 8</p>
-                <h1>CONNECTIONS</h1>
-            </div>
-        </div>
-        <div id="row-5">
-            <div id="widget-9">
-                <p>LEVEL 9</p>
-                <h1>WORDLE</h1>
-            </div>
-            <div id="widget-10">
-                <p>LEVEL 10</p>
-                <h1>CROSSWORD</h1>
+            <div id="row-5">
+                <div id="widget-9">
+                    <p>LEVEL 9</p>
+                    <h1>WORDLE</h1>
+                </div>
+                <div id="widget-10">
+                    <p>LEVEL 10</p>
+                    <h1>CROSSWORD</h1>
+                </div>
             </div>
         </div>
     </div>
