--- a/quiz/level-one.html
+++ b/quiz/level-one.html
@@ -23,7 +23,8 @@
             <div id="main-win-content-wrapper">
                 <h1>Level Completed!</h1>
                 <div id="input-solution">
-                    <p>Enter the correct Solution to go to the next Level</p>
+                    <p>Enter the correct Solution to go to the next Level<br>
+                    Hint: Take a look at the Overview</p>
                     <input type="text" id="solution-collector">
                 </div>
                 <div id="button-wrapper">
